# ifc-hlm

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
ifc_hlm/: hlm.py  hlm_bmi.py
ifc_hlm/docs/: model252.md  model254.md
ifc_hlm/models/: __init__.py  model252.py  model254.py
