[project]
name = "ifc-hlm"
version = "0.2.0"
description = "Hillslope-Link Model"
authors = [{ name = "Ruben Molina", email = "rmolina@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bmipy>=2.0.1,<3.0.0",
    "networkx>=3.4.2,<4.0.0",
    "numpy>=2.2.2,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "scipy>=1.15.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
