[project]
name = "ifc-hlm"
version = "0.4.2"
description = "Hillslope-Link Model"
authors = [{ name = "Ruben Molina", email = "rmolina@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bmipy>=2.0",
    "networkx>=2.8",
    "numpy>=1.21",
    "pandas>=1.4",
    "pyyaml>=6.0",
    "scipy>=1.9",
    "tqdm>=4.60",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.0.1.230501",
    "scipy-stubs>=1.15.3.0",
    "types-networkx>=3.5.0.20250701",
    "types-pyyaml>=6.0.12.20250516",
    "types-tqdm>=4.67.0.20250516",
]
